--- a/src/pages/all-users/AllUsers.css
+++ b/src/pages/all-users/AllUsers.css
@@ -106,17 +106,36 @@ p.card-description {
     font-family: "Lato", sans-serif;
     letter-spacing: 0.05rem;
     margin-bottom: 0;
-    color: #c9e4f9;
+    margin-top: 0.5rem;
+    color: white;
+    font-size:1rem;
 }
 
-p.card-description:hover {
-    color: #62C1E5;
+p.card-description span {
+    font-style: italic;
+    text-shadow: 0 0 0.2em #1366d6, 0 0 0.2em #1366d6;
 }
 
-p.card-description,
+.updateDeleteBtnContainer {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-top: 1rem;
+    margin-bottom:0.5rem;
+}
+
 .noUserFoundMessage,
 .load {
     font-size:1.2rem;
+}
+
+@media (max-width:1549px) {
+    .card,
+    .card-background {
+        width: 364px;
+        height: 400px;
+        margin-bottom: 0.9rem;
+    }
 }
 
 @media (min-width:1550px) {
@@ -132,11 +151,3 @@ p.card-description,
     }
 }
 
-@media (max-width:1549px) {
-    .card,
-    .card-background {
-        width: 364px;
-        height: 400px;
-        margin-bottom: 0.9rem;
-    }
-}
