--- a/src/pages/add-user-form/AddUserForm.css
+++ b/src/pages/add-user-form/AddUserForm.css
@@ -39,7 +39,7 @@
     display: block;
     margin: 50px auto 0 0;
     border-radius: 50%;
-    background-image: url('../../images/man-2425121_640.jpg');
+    background-image: url('../../images/people.jpg');
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
